fixed child dashboard link display, hover abnimations, and trophyroom x overflow

--- a/src/styles/less/ChildDashboard.less
+++ b/src/styles/less/ChildDashboard.less
@@ -111,3 +111,29 @@
     font-size: 3.7rem;
   }
 }
+.adventure-passport:hover {
+  background-color: lighten(@bright-sun, 10%);
+  cursor: pointer;
+  img{
+    transform: scale(1.2);
+    transition: .3s, ease-in-out;
+  }
+}
+
+.trophy-room:hover {
+  background-color: lighten(@boston-blue, 10%);
+  cursor: pointer;
+  img{
+    transform: scale(1.2);
+    transition: .3s, ease-in-out;
+  }
+}
+
+.change-avatar:hover {
+  background-color: lighten(@burnt-sienna, 10%);
+  cursor: pointer;
+  img{
+    transform: scale(1.2);
+    transition: .3s, ease-in-out;
+  }
+}
