--- a/src/styles/less/TrophyRoom.less
+++ b/src/styles/less/TrophyRoom.less
@@ -69,6 +69,10 @@
   letter-spacing: 7px;
 }
 
+.ant-modal-body {
+  overflow-y: scroll;
+}
+
 .ant-modal-body h3 {
   color: #ff9100;
   text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
@@ -88,7 +92,9 @@
   letter-spacing: 1px;
   z-index: 1;
   text-align: center;
+  
 }
+
 .trophy-container {
   display: flex;
   // width: 95%;
@@ -97,52 +103,52 @@
   // @media screen and (@mobile){
     //     flex-direction: column;
     // }
-  }
-  .modal-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-divider {
+  margin: 0px 20px;
+  width: 1px;
   
-  .custom-divider {
-    margin: 0px 20px;
-    width: 1px;
-    
-    @media screen and (@mobile) {
-      visibility: hidden;
-    }
+  @media screen and (@mobile) {
+    visibility: hidden;
   }
-  
-  .ant-modal-title {
-    color: #ff9100;
-    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
-    text-align: center;
-    font-size: 3rem;
-    font-family: 'bangers';
-    font-weight: bold;
-    z-index: 1;
-    letter-spacing: 7px;
-  }
-  
-  .ant-modal-body h3 {
-    color: #ff9100;
-    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
-    font-size: 2rem;
-    font-family: 'bangers';
-    font-weight: bold;
-    letter-spacing: 2px;
-    z-index: 1;
-    text-align: center;
-  }
-  
-  .ant-modal-body p {
-    color: #939aff;
-    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
-    font-size: 1rem;
-    font-family: 'bangers';
-    letter-spacing: 1px;
-    z-index: 1;
-    text-align: center;
-  }
+}
+
+.ant-modal-title {
+  color: #ff9100;
+  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
+  text-align: center;
+  font-size: 3rem;
+  font-family: 'bangers';
+  font-weight: bold;
+  z-index: 1;
+  letter-spacing: 7px;
+}
+
+.ant-modal-body h3 {
+  color: #ff9100;
+  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
+  font-size: 2rem;
+  font-family: 'bangers';
+  font-weight: bold;
+  letter-spacing: 2px;
+  z-index: 1;
+  text-align: center;
+}
+
+.ant-modal-body p {
+  color: #939aff;
+  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
+  font-size: 1rem;
+  font-family: 'bangers';
+  letter-spacing: 1px;
+  z-index: 1;
+  text-align: center;
 }
